syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegRequest) returns (RegResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message RegRequest {
  string username = 1;
  string password = 2;
}

message RegResponse {
  string message = 1;
}



